2009-12-11  Fumitoshi Ukai  <ukai@chromium.org>

Reviewed by Pavel Feldman.

        Log WebSocket error to Web Inspector console.
        https://bugs.webkit.org/show_bug.cgi?id=32165

        * websocket/tests/handshake-error-expected.txt:
        * websocket/tests/handshake-fail-by-cross-origin-expected.txt:
        * websocket/tests/handshake-fail-by-sub-protocol-mismatch-expected.txt:
2009-12-11  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Pavel Feldman.

        Log WebSocket error to Web Inspector console.
        https://bugs.webkit.org/show_bug.cgi?id=32165

        * websockets/WebSocketChannel.cpp:
        (WebCore::WebSocketChannel::didOpen):
        (WebCore::WebSocketChannel::appendToBuffer):
        * websockets/WebSocketHandshake.cpp:
        (WebCore::WebSocketHandshake::readServerHandshake):
        (WebCore::WebSocketHandshake::readHTTPHeaders):
        (WebCore::WebSocketHandshake::checkResponseHeaders):

Canonical link: https://commits.webkit.org/43404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51979 268f45cc-cd09-0410-ab3c-d52691b4dbfc